amvera fix env